--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://github.com/Nivin389/Blog'
+baseURL = 'https://blognivins.netlify.app/'
 languageCode = 'en-us'
 title = 'Nivin Blogs'
 theme = "beautifulhugo"
