--- a/config.toml
+++ b/config.toml
@@ -12,6 +12,7 @@ pygmentsStyle = "trac"
   favicon = "img/favicon.ico"
   dateFormat = "April 20 2023"
   wordCount = true
+  rss = true
 
  [Author]
  name = "Nivin S"
