--- a/config.toml
+++ b/config.toml
@@ -13,6 +13,7 @@ pygmentsStyle = "trac"
   dateFormat = "April 20 2023"
   wordCount = true
   rss = true
+   readingTime = true
 
  [Author]
  name = "Nivin S"
@@ -50,4 +51,11 @@ pygmentsStyle = "trac"
     parent = "samples"
     name = "🥽 Favicon"
     url = "posts/favicon"
+    weight = 1
+
+
+[[menu.main]]
+    parent = "samples"
+    name = "📃 CLI"
+    url = "posts/create-cli-portfoilo"
     weight = 1
