Discord server Link Not working Fixed

--- a/config.toml
+++ b/config.toml
@@ -23,7 +23,7 @@ pygmentsStyle = "trac"
  twitter = "https://twitter.com/Nivin389"
  instagram = "https://www.instagram.com/vin._.xil/"
  spotify = "https://open.spotify.com/user/j0u77uc3cgfpkknhv10c3v32o"
- discord = "invite code (https://discord.gg/YWsCyzecDR)"
+ discord = "YWsCyzecDR"
 
 
 
